--- a/mainapp/static/css/base.css
+++ b/mainapp/static/css/base.css
@@ -6,10 +6,14 @@
     box-sizing: border-box;
 }
 
+html, body {
+    height: 100%;
+}
+
 body {
     background-repeat: no-repeat;
     background-size: cover;
-    min-height: 100%;
+    min-height: 100vh;
     line-height: 1.5;
     -webkit-font-smoothing: antialiased;
 }
@@ -24,6 +28,7 @@ a {
     justify-content: space-between;
     padding: 0.75rem 1.5rem;
     align-items: center;
+    height: 10%;
 }
 
 .left {
