--- a/mainapp/templates/contact.html
+++ b/mainapp/templates/contact.html
@@ -30,7 +30,13 @@
       <input type="submit" name="Submit" id="submit" value="Submit">
     </form>
     <div class="contact-desc">
-      <img src="{% static 'images/contact us.png' %}" alt="">
+      <!-- <img src="https://static.vecteezy.com/system/resources/thumbnails/001/263/984/small/contact-us-concept.jpg" alt=""> -->
+      <div class="contact-glass">
+        <div class="ball b1"></div>
+        <div class="ball b2"></div>
+        <div class="glassomorphism">Contact Us</div>
+      </div>
+      <!-- <img src="{% static 'images/contact us.png' %}" alt=""> -->
       <div class="contact-details">
         <div class="detail">
           <iconify-icon icon="carbon:location"></iconify-icon>
