--- a/mainapp/static/css/about.css
+++ b/mainapp/static/css/about.css
@@ -7,8 +7,9 @@
 }
 
 .about {
-    background-color: white;
+    background-color: #eeeeee;
     border-radius: 20px;
+    box-shadow: 0px 0px 20px #00000096;
     padding: 1rem 1.5rem;
     height: 75vh;
     overflow-y: auto;
@@ -25,7 +26,7 @@ h2, p {
 h2 {
     font-size: calc(8px + 1.5vw);
     margin-bottom: 0.5rem;
-    color: #000050;
+    color: #000000;
 }
 
 p {
