--- a/mainapp/static/css/base.css
+++ b/mainapp/static/css/base.css
@@ -20,13 +20,16 @@ body {
 
 a {
     text-decoration: none;
-    color: white;
+    color: rgba(0, 0, 0, 0.7);
+    font-size: calc(8px + 0.75vw);
+    font-family: Poppins;
+    font-weight: 500;
 }
 
 .header {
     display: flex;
     justify-content: space-between;
-    padding: 0.75rem 1.5rem;
+    padding: 0.75rem 5rem;
     align-items: center;
     height: 10%;
 }
@@ -35,39 +38,30 @@ a {
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 1rem;
+    gap: 2rem;
 }
 
 .logo {
-    width: 4rem;
-    height: 4rem;
+    width: 5rem;
+    height: 5rem;
     background-color: whitesmoke;
-    border-radius: 999px;
+    /* border-radius: 999px; */
 }
 
 .logo img {
     width: 100%;
     height: 100%;
-    border-radius: 999px;
+    /* border-radius: 999px; */
 }
 
 .title {
-    font-size: 2rem;
-    font-family: 'Inclusive Sans', sans-serif;
-    color: #27005D;
+    font-size: calc(8px + 1.5vw);
+    font-family: 'Poppins';
+    font-weight: 500;
+    color: black;
 }
 
 .right {
     display: flex;
-    gap: 1.5rem;
-}
-
-.btn {
-    background-color: #4D2DB7;
-    color: white;
-    border-radius: 2rem;
-    padding: 0.75rem 1.5rem;
-    border: 0;
-    font-size: 1.5rem;
-    font-family: 'Inclusive Sans', sans-serif;
+    gap: 2rem;
 }
