--- a/mainapp/static/css/contact.css
+++ b/mainapp/static/css/contact.css
@@ -10,23 +10,65 @@
     background-color: #ffffff;
     border-radius: 0.5rem;
     padding: 3rem;
-    padding-top: 6rem;
     display: flex;
     width: 60%;
     position: relative;
 }
 
-.contact-container::before {
-    content: '';
-    width: 100px;
-    border: 4px solid #BA68C8;
-    border-radius: 10px;
-    background-color: #BA68C8;
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.20);
-    position: absolute;
-    top: 10%;
-    right: 10%;
+.contact-glass {
+    position: relative;
+    width: 100%;
+    height: -webkit-fill-available;
 }
+
+.ball {
+	display: block;
+	width: 7rem;
+	height: 7rem;
+	margin: 50px auto 0;
+	border-radius: 50%;
+}
+
+.b1 {
+    background: radial-gradient(circle at 35% 15%, white 1px, aqua 3%, #0014ff 60%, aqua 100%);
+    right: 10%;
+    top: 7rem;
+    position: absolute;
+}
+
+.b2 {
+    background: radial-gradient(circle at 35% 15%, white 1px, #e9e9e9 3%, #77c3f7 60%, aqua 100%);
+    left: 10%;
+    top: 15rem;
+    position: absolute;
+}
+
+.glassomorphism {
+    border-radius: 1rem;
+    backdrop-filter: blur(16px) saturate(180%);
+    color: #464646;
+    font-family: Poppins;
+    font-size: calc(8px + 1.75vw);
+    font-weight: 500;
+    padding: 0.5rem 1rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    text-align: center;
+    translate: -50%;
+    animation: bounce 5s infinite ease-in-out;
+    text-transform: uppercase;
+    width: 60%;
+}
+
+@keyframes bounce {
+    0%, 100% {
+      transform: translateY(0px);
+    }
+    50% {
+      transform: translateY(-50px);
+    }
+  }
 
 .contact-form, .contact-form .fields{
     display: flex;
@@ -34,9 +76,10 @@
 }
 
 .contact-form {
+    gap: 2rem;
+    justify-content: space-between;
     padding: 0rem 3.5rem;
     width: 50%;
-    justify-content: space-between;
 }
 
 .form-head h2 {
@@ -66,7 +109,7 @@
     font-family: 'Poppins';
     font-size: calc(8px + 0.75vw);
     outline: none;
-    border: 3px solid #7F5AA8;
+    border: 3px solid rgba(0, 0, 0, 0.5);
     padding: 0.5rem 0.75rem;
     margin-bottom: 1rem;
 }
@@ -77,7 +120,7 @@
 
 .contact-form input[type="submit"] {
     border: none;
-    background-color: #2D96BD;
+    background-color: #000000;
     color: #fff;
     padding: 1rem 0rem;
     box-shadow: 0 0 10px 0 #BA68C8;
@@ -108,7 +151,7 @@
 }
 
 .contact-details iconify-icon {
-    color: purple;
+    color: rgba(0, 0, 0, 0.7);
     font-size: calc(16px + 0.25vw);
 }
 
@@ -135,7 +178,7 @@
     padding: 1rem 0;
     border-radius: 2rem 0 0 2rem;
     overflow: hidden;
-    background-color: #E5CEE9;
+    background-color: #e3e3e3;
     box-shadow: -2px 2px 4px rgba(0, 0, 0, 0.25)
 }
 
@@ -143,8 +186,12 @@
     width: 2.5rem;
     height: 2.5rem;
     border-radius: 999px;
-    background-color: #5D3464;
+    background-color: #000000;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); 
     display: grid;
     place-items: center;
+}
+
+iconify-icon {
+    color: white;
 }
