--- a/mainapp/templates/base.html
+++ b/mainapp/templates/base.html
@@ -19,7 +19,7 @@
             <div class="logo">
                 <img src="{% static 'images/logo.jpg' %}" alt="">
             </div>
-            <div class="title">Haze Busters</div>
+            <a href="{% url 'index' %}"><div class="title">Haze Busters</div></a>
         </div>
         <div class="right">
             <div><a href="{% url 'about' %}">About</a></div>
