updated pages with routes and css

--- a/mainapp/templates/dehaze.html
+++ b/mainapp/templates/dehaze.html
@@ -19,7 +19,7 @@
 
         <div class="options">
             <a href="{% url 'upload' %}" class="btn">Upload</a>
-            <a href="{% url 'about' %}" class="btn">Realtime</a>
+            <a href="{% url 'realtime' %}" class="btn">Realtime</a>
         </div>
     </div>
 {% endblock body %}
