--- a/mainapp/static/css/base.css
+++ b/mainapp/static/css/base.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inclusive+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 * {
     margin: 0;
